--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "connect-mongo": "^4.4.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
+    "express-session": "^1.17.2",
     "mongoose": "^5.12.13",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "node": "^16.3.0"
   }
 }
